kubernetes/homelab-k8s-001/apps/spring-dev/gateway/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-dev-gateway-ingress
  namespace: spring-dev
  annotations:
    hajimari.io/enable: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: spring-dev-gateway.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: spring-dev-gateway
                port:
                  number: 80
            path: /
            pathType: Prefix
